Update .config/Kvantum/kvantum.kvconfig Update .config/hypr/UserConfigs/00-Readme Update .config/hypr/UserConfigs/UserSettings.conf Update .config/hypr/UserScripts/00-Readme Update .config/hypr/UserScripts/QuickEdit.sh Update .config/hypr/UserScripts/RainbowBorders.sh Update .config/hypr/UserScripts/WallpaperRandom.sh Update .config/hypr/UserScripts/WallpaperSelect.sh Update .config/hypr/UserScripts/ZshChangeTheme.sh Update .config/hypr/configs/Keybinds.conf Update .config/hypr/initial-boot.sh Update .config/hypr/hyprland.conf Update .config/hypr/scripts/DarkLight.sh Update .config/hypr/scripts/KeyHints.sh Update .config/hypr/scripts/Polkit.sh Update .config/hypr/scripts/PortalHyprland.sh Update .config/hypr/scripts/Refresh.sh Update .config/hypr/scripts/RefreshNoWaybar.sh Update .config/hypr/scripts/WaybarCava.sh Update .config/hypr/scripts/Wlogout.sh Update .config/kitty/kitty.conf Update .config/nvim/lazy-lock.json Update .config/rofi/config-compact.rasi Update .config/rofi/config-wallpaper.rasi Update .config/rofi/config-waybar-style.rasi Update .config/rofi/config-zsh-theme.rasi Update .config/rofi/config.rasi Update .config/rofi/resolution/1080p/config.rasi Update .config/rofi/resolution/1440p/config.rasi Update .config/waybar/configs/[BOT & Left] SouthWest Update .config/waybar/configs/[BOT & Right] SouthEast Update .config/waybar/configs/[BOT] Camellia Update .config/waybar/configs/[BOT] Chrysanthemum Update .config/waybar/configs/[BOT] Default Laptop Update .config/waybar/configs/[BOT] Gardenia Update .config/waybar/configs/[BOT] Peony Update .config/waybar/configs/[BOT] Sleek Update .config/waybar/configs/[Left] WestWing Update .config/waybar/configs/[Right] EastWing Update .config/waybar/configs/[TOP & BOT] SummitSplit Update .config/waybar/configs/[TOP & Left] NorthWest Update .config/waybar/configs/[TOP & Right] NorthEast Update .config/waybar/configs/[TOP] Camellia Update .config/waybar/configs/[TOP] Chrysanthemum Update .config/waybar/configs/[TOP] De

--- a/private_dot_config/waybar/style/[Colorful] Aurora.css
+++ b/private_dot_config/waybar/style/[Colorful] Aurora.css
@@ -104,17 +104,23 @@ tooltip label{
 #wireplumber,
 #workspaces,
 #custom-backlight,
+#custom-browser,
 #custom-cava_mviz,
 #custom-cycle_wall,
-#custom-hint,
-#custom-hypridle,
+#custom-file_manager,
+#custom-keybinds,
 #custom-keyboard,
 #custom-light_dark,
 #custom-lock,
+#custom-hint,
+#custom-hypridle,
 #custom-menu,
-#custom-power,
 #custom-power_vertical,
+#custom-power,
+#custom-settings,
+#custom-spotify,
 #custom-swaync,
+#custom-tty,
 #custom-updater,
 #custom-weather,
 #custom-weather.clearNight,
@@ -127,11 +133,11 @@ tooltip label{
 #custom-weather.showyIcyDay,
 #custom-weather.snowyIcyNight,
 #custom-weather.sunnyDay {
-    background-image: linear-gradient(45deg, #14e81e 10%, #017ed5 54%, #8d00c4 90%);
+    background-image: linear-gradient(45deg, #95E6CB, #59C2FF, #D2A6FF);
 	color: black;
 	border: 1px;
 	border-style: solid;
-	border-radius: 4px;
+	border-radius: 6px;
 	padding-top: 4px;
 	padding-bottom: 4px;
 	padding-right: 6px;
