--- a/private_dot_config/waybar/style/[Colored] Translucent.css
+++ b/private_dot_config/waybar/style/[Colored] Translucent.css
@@ -1,3 +1,6 @@
+/* ---- 💫 https://github.com/JaKooLit 💫 ---- */
+/* Translucent */
+
 @define-color critical #ff0000; /* critical color */
 @define-color warning #f3f809;  /* warning color */
 @define-color fgcolor #ffffff;  /* foreground color */
@@ -11,9 +14,6 @@
 @define-color accent4 #bb9af7;
 @define-color accent5 #7da6ff;
 @define-color accent6 #0db9d7;
-
-/* ---- 💫 https://github.com/JaKooLit 💫 ---- */
-/* Translucent */
 
 * {
 font-family: "JetBrainsMono Nerd Font";
@@ -123,16 +123,23 @@ tooltip {
 #wireplumber,
 #workspaces,
 #custom-backlight,
+#custom-browser,
+#custom-cava_mviz,
 #custom-cycle_wall,
-#custom-hint,
-#custom-hypridle,
+#custom-file_manager,
+#custom-keybinds,
 #custom-keyboard,
 #custom-light_dark,
 #custom-lock,
+#custom-hint,
+#custom-hypridle,
 #custom-menu,
 #custom-power_vertical,
 #custom-power,
+#custom-settings,
+#custom-spotify,
 #custom-swaync,
+#custom-tty,
 #custom-updater,
 #custom-weather,
 #custom-weather.clearNight,
