--- a/private_dot_config/waybar/style/[Colorful] Rainbow Spectrum.css
+++ b/private_dot_config/waybar/style/[Colorful] Rainbow Spectrum.css
@@ -98,16 +98,23 @@ tooltip label{
 #wireplumber,
 #workspaces,
 #custom-backlight,
+#custom-browser,
+#custom-cava_mviz,
 #custom-cycle_wall,
-#custom-hint,
-#custom-hypridle,
+#custom-file_manager,
+#custom-keybinds,
 #custom-keyboard,
 #custom-light_dark,
 #custom-lock,
+#custom-hint,
+#custom-hypridle,
 #custom-menu,
 #custom-power_vertical,
 #custom-power,
+#custom-settings,
+#custom-spotify,
 #custom-swaync,
+#custom-tty,
 #custom-updater,
 #custom-weather,
 #custom-weather.clearNight,
@@ -203,6 +210,15 @@ tooltip label{
 
 #custom-updater {
 	background-color: #e6ed7b;
+}
+
+#custom-cava_mviz,
+#power-profiles-daemon,
+#custom-browser,
+#custom-file_manager,
+#custom-tty,
+#custom-settings {
+    background: linear-gradient(45deg, #14e81e 10%, #017ed5 54%, #8d00c4 90%);
 }
 
 #custom-cycle_wall {
