--- a/private_dot_config/waybar/style/[Transparent] Crystal Clear.css
+++ b/private_dot_config/waybar/style/[Transparent] Crystal Clear.css
@@ -1,7 +1,5 @@
 /* ----------- 💫 https://github.com/JaKooLit 💫 -------- */
-/* ..........................................*/
 /* .......Crystal Clear....................... */
-/* ......................................... */
 /* --- 👍 designed by https://github.com/Krautt  👍 --- */
 
 *{
@@ -89,17 +87,24 @@ window#waybar.empty #window {
 #window,
 #wireplumber,
 #workspaces,
+#custom-backlight,
+#custom-browser,
+#custom-cava_mviz,
 #custom-cycle_wall,
-#custom-hint,
-#custom-hypridle,
+#custom-file_manager,
+#custom-keybinds,
 #custom-keyboard,
 #custom-light_dark,
 #custom-lock,
+#custom-hint,
+#custom-hypridle,
 #custom-menu,
 #custom-power_vertical,
 #custom-power,
-#custom-swaync,
+#custom-settings,
 #custom-spotify,
+#custom-swaync,
+#custom-tty,
 #custom-updater,
 #custom-weather,
 #custom-weather.clearNight,
