--- a/private_dot_config/nushell/env.nu.tmpl
+++ b/private_dot_config/nushell/env.nu.tmpl
@@ -82,6 +82,15 @@ $env.NU_PLUGIN_DIRS = [
 
 $env.BUN_INSTALL = $env.HOME + "/.bun"
 
+def --env y [...args] {
+	let tmp = (mktemp -t "yazi-cwd.XXXXXX")
+	yazi ...$args --cwd-file $tmp
+	let cwd = (open $tmp)
+	if $cwd != "" and $cwd != $env.PWD {
+		cd $cwd
+	}
+	rm -fp $tmp
+}
 
 $env.PATH = ($env.PATH | split row (char esep) |
 prepend $"($env.BUN_INSTALL)/bin" |
