--- a/private_dot_config/nushell/config.nu.tmpl
+++ b/private_dot_config/nushell/config.nu.tmpl
@@ -788,8 +788,14 @@ use ~/.cache/starship/init.nu
 # }
 
 
-$env.ASDF_DIR = ($env.HOME | path join '.asdf')
-source {{ .chezmoi.homeDir }}/.asdf/asdf.nu
+let shims_dir = (
+  if ( $env | get --ignore-errors ASDF_DATA_DIR | is-empty ) {
+    $env.HOME | path join '.asdf'
+  } else {
+    $env.ASDF_DATA_DIR
+  } | path join 'shims'
+)
+$env.PATH = ( $env.PATH | split row (char esep) | where { |p| $p != $shims_dir } | prepend $shims_dir )
 source ~/.zoxide.nu
 
 use ~/.cache/starship/init.nu
