--- a/private_Library/private_Application Support/nushell/env.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/env.nu.tmpl
@@ -79,7 +79,21 @@ $env.NU_PLUGIN_DIRS = [
 ]
 
 # To add entries to PATH (on Windows you might use Path), you can use the following pattern:
+
+$env.BUN_INSTALL = $env.HOME + "/.bun"
+
+def --env y [...args] {
+	let tmp = (mktemp -t "yazi-cwd.XXXXXX")
+	yazi ...$args --cwd-file $tmp
+	let cwd = (open $tmp)
+	if $cwd != "" and $cwd != $env.PWD {
+		cd $cwd
+	}
+	rm -fp $tmp
+}
+
 $env.PATH = ($env.PATH | split row (char esep) |
+prepend $"($env.BUN_INSTALL)/bin" |
 prepend {{ .chezmoi.homeDir }}/go/bin |
 prepend {{ .chezmoi.homeDir }}/.cargo/bin |
 prepend {{ .chezmoi.homeDir }}/.sdkman/candidates/java/current/bin |
@@ -123,6 +137,9 @@ $env.TASKDDATA = '{{ .chezmoi.homeDir }}/taskd'
 
 
 $env.EDITOR = "nvim"
+# $env.LC_CTYPE = "ko_KR.UTF-8"
+# $env.LANG = "ko_KR.UTF-8"
+
 
 $env.STARSHIP_SHELL = "nu"
 mkdir ~/.cache/starship
