--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -94,6 +94,24 @@ wezterm.on("format-tab-title", function(tab, tabs, panes, config, hover, max_wid
 end)
 
 local config= {
+
+keys = {
+		{
+			key = "w",
+			mods = "CTRL",
+			action = wezterm.action.CloseCurrentPane({ confirm = false }),
+		},
+		{
+			key = "d",
+			mods = "CTRL|SHIFT",
+			action = wezterm.action.SplitHorizontal({ domain = "CurrentPaneDomain" }),
+		},
+		{
+			key = "d",
+			mods = "CTRL",
+			action = wezterm.action.SplitVertical({ domain = "CurrentPaneDomain" }),
+		},
+	},
 	ssh_domains = {
 		{
 			name = "mbp.darwin",
