--- a/private_dot_config/swaync/executable_style.css
+++ b/private_dot_config/swaync/executable_style.css
@@ -5,14 +5,14 @@
 
 @define-color noti-border-color @color12;
 @define-color noti-bg rgba(0, 0, 0, 0.8);
-@define-color noti-bg-alt #111111;
-@define-color noti-bg-hover @color9;
+@define-color noti-bg-alt @background-alt;
+@define-color noti-bg-hover @background;
 @define-color text-color @foreground;
-@define-color text-color-alt @foreground;
-@define-color text-color-disabled rgba(150, 150, 150, 0.8);
+
 * {
     font-family: "JetBrains Mono Nerd Font";
     font-weight: bold;
+    font-size: 1rem;
 }
 
 .control-center .notification-row:focus,
@@ -24,20 +24,14 @@
 
 .notification-row {
     outline: none;
-    margin: 0px;
 }
 
 .notification {
-	border-radius: 10px;
-}
-
-.notification-content{
-	color: @text-color;
+	/*color: @text-color;*/
     background: @noti-bg;
     padding: 3px 10px 3px 6px;
     border-radius: 10px;
-    border: 1px solid @noti-border-color;
-    margin: 0px;
+    border: 2px solid @noti-border-color;
 }
 
 .notification-default-action {
@@ -74,8 +68,9 @@
 .notification-default-action:hover,
 .notification-action:hover {
     color: @text-color;
-    background: @color1
+    background: @noti-bg
 }
+
 
 .notification-default-action {
     border-radius: 10px;
@@ -120,7 +115,7 @@
 
 .inline-reply-button:disabled {
     background: initial;
-    color: @text-color-disabled;
+    color: @text-color;
     border: 1px solid transparent
 }
 
@@ -130,7 +125,7 @@
 
 .body-image {
     margin-top: 6px;
-    color: @text-color-alt;
+    color: @text-color;
     border-radius: 10px
 }
 
@@ -138,7 +133,7 @@
     font-size: 1rem;
     font-weight: bold;
     background: transparent;
-    color: @text-color-alt;
+    color: @text-color;
     text-shadow: none
 }
 
@@ -161,7 +156,7 @@
 
 .control-center {
     background: @noti-bg;
-    border: 1.5px solid @noti-border-color;
+    border: 1px solid @noti-border-color;
 	color: @text-color;
     border-radius: 10px;
 }
@@ -183,7 +178,7 @@
 }
 
 .widget-title {
-    color: @noti-border-color;
+    color: @text-color;
     background: @noti-bg-alt;
     padding: 3px 6px;
     margin: 5px;
@@ -199,9 +194,10 @@
 	border: 0.5px solid @noti-border-color;
 }
 
+/* clear button */
 .widget-title>button:hover {
-    background: #f7768e;
-    color: @noti-border-color;
+    background: @text-color;
+    color: red;
 }
 
 .widget-dnd {
@@ -209,13 +205,13 @@
     padding: 3px 6px;
     margin: 5px;
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 0.5rem;
     color: @noti-border-color;
 }
 
 .widget-dnd>switch {
     border-radius: 10px;
-    /* border: 1px solid #7aa2f7; */
+    border: 1px solid #7aa2f7;
     background: @noti-border-color;
 }
 
@@ -245,7 +241,7 @@
 
 .widget-mpris {
     color: @text-color;
-    background: @noti-bg-alt;
+    background: @noti-bg;
     padding: 3px 6px;
     margin: 5px;
     border-radius: 10px;
@@ -285,8 +281,9 @@
     color: @text-color
 }
 
+/* individual buttons */
 .widget-buttons-grid>flowbox>flowboxchild>button:hover {
-    background: @noti-border-color;
+    background: @text-color;
     color: @noti-bg-hover
 }
 
@@ -329,22 +326,4 @@
     border-radius: 10px;
     font-size: x-large;
     color: @text-color
-}
-
-.low {
-  background: @text-color;
-  padding: 0px;
-  border-radius: 10px;
-}
-
-.normal {
-  background: @text-color;
-  padding: 0px;
-  border-radius: 10px;
-}
-
-.critical {
-  background: red;
-  padding: 0px;
-  border-radius: 10px;
 }
