--- a/private_dot_config/nushell/env.nu.tmpl
+++ b/private_dot_config/nushell/env.nu.tmpl
@@ -121,6 +121,7 @@ prepend {{ .chezmoi.homeDir }}/opt/postgresql@15/bin |
 prepend {{ .chezmoi.homeDir }}/.rbenv/shims |
 prepend /opt/local/bin |
 prepend /opt/local/sbin |
+prepend /home/inu/.local/share/../bin/env |
 prepend /Library/Apple/usr/bin |
 prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts |
 prepend /opt/homebrew/opt/llvm/bin )
